added mongo db repo methods and fixed controllers, open api contract
