# src/main/java/parser/app/webscraper/controllers/StorageController.java
@@ -10,6 +10,8 @@ import parser.userService.openapi.api.StorageApiDelegate;
 import parser.userService.openapi.model.FolderOpenApi;
 import parser.userService.openapi.model.StorageOpenApi;
 
+import java.util.UUID;
+
 
 @RestController
 @RequestMapping("/api/storage")
@@ -26,43 +28,58 @@ public class StorageController implements StorageApiDelegate {
         return ResponseEntity.ok(storageService.findByUserId(userId));
     }
 
+
     @Observed
-    @PostMapping("/folder/new")
+    @PutMapping
     @Override
-    public ResponseEntity<Void> createFolder(
-            @RequestParam(name = "userId") @Valid Long userId,
-            @RequestBody FolderOpenApi folderOpenApi
+    public ResponseEntity<Void> updateStorageByUserId (
+            @RequestParam(name = "userId") Long userId,
+            @RequestBody StorageOpenApi storageOpenApi
     ) {
-        return storageService.createNewFolder(userId, folderOpenApi);
+        return storageService.updateStorageByUserId(userId, storageOpenApi);
+    }
+
+    @Observed
+    @PutMapping("/{storageId}")
+    @Override
+    public ResponseEntity<Void> updateStorageById (
+            @PathVariable(name = "storageId") UUID storageId,
+            @RequestBody StorageOpenApi storageOpenApi
+    ) {
+        return storageService.updateStorageById(storageId, storageOpenApi);
     }
 
 
+
     @Observed
-    @GetMapping("/folder/{folderId}")
+    @GetMapping("/{storageId}/folder/{folderId}")
     @Override
     public ResponseEntity<FolderOpenApi> getFolderByFolderId(
-            @PathVariable(name = "folderId") @Valid Long folderId
+            @PathVariable(name = "storageId") @Valid UUID storageId,
+            @PathVariable(name = "folderId") @Valid UUID folderId
     ) {
-        return ResponseEntity.ok(storageService.getFolderByFolderId(folderId));
+        return ResponseEntity.ok(storageService.findFolderById(storageId, folderId));
     }
 
     @Observed
-    @PutMapping("/folder/{folderId}")
+    @PutMapping("/{storageId}/folder/{folderId}")
     @Override
     public ResponseEntity<Void> updateFolderById(
-            @PathVariable(name = "folderId") @Valid Long folderId,
+            @PathVariable(name = "storageId") @Valid UUID storageId,
+            @PathVariable(name = "folderId") @Valid UUID folderId,
             @RequestBody FolderOpenApi folderOpenApi
     ) {
-        return storageService.updateFolderById(folderId, folderOpenApi);
+        return storageService.updateFolderById(storageId, folderId, folderOpenApi);
     }
 
     @Observed
-    @DeleteMapping("/folder/{folderId}")
+    @DeleteMapping("/{storageId}/folder/{folderId}")
     @Override
     public ResponseEntity<Void> deleteFolderById(
-            @PathVariable(name = "folderId") @Valid Long folderId
+            @PathVariable(name = "storageId") @Valid UUID storageId,
+            @PathVariable(name = "folderId") @Valid UUID folderId
     ) {
-        return storageService.deleteFolderById(folderId);
+        return storageService.deleteStorageItemById(storageId, folderId);
     }
 
 }
